# test-kotlin-jni

./: README  settings.gradle.kts
app/: build.gradle.kts
app/src/main/kotlin/org/example/: App.kt  main.kt
app/src/test/kotlin/org/example/: AppTest.kt
native/: CMakeLists.txt  build.gradle.kts
native/src/: testjni.c
native/src/include/: testjni.h
